--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,13 @@
+buildscript { 
+  dependencies {
+    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3' // Add this line
+  }
+}
+
 apply plugin: "java"
+apply plugin: 'com.github.dcendents.android-maven'  
+
+group='com.github.juick'
 
 dependencies {
 	testCompile 'junit:junit:4.12'
